--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,68 @@ body {
 .header-features-item:not(:last-child) {
   border-right: none;
 }
+.section {
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+.section-title {
+  font-family: "Bebas Neue";
+  color: rgb(41, 45, 51);
+  font-size: 60px;
+}
+.steps {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  gap: 30px;
+}
+.steps-item {
+  max-width: 330px;
+}
+.steps-num {
+  color: rgb(92, 142, 230);
+  font-family: "Bebas Neue";
+  font-size: 48px;
+  line-height: 120%;
+  display: flex;
+  align-items: center;
+}
+.steps-num::after {
+  content: "";
+  height: 1px;
+  width: 100%;
+  background: rgb(235, 235, 240);
+  margin-left: 30px;
+}
+.steps-title {
+  color: rgb(41, 45, 51);
+  font-size: 28px;
+  line-height: 160%;
+  font-weight: 400;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+.steps-text {
+  color: rgb(130, 138, 153);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.steps-link {
+  display: flex;
+  align-items: center;
+  color: rgb(92, 142, 230);
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 160%;
+  text-decoration: none;
+}
+.steps-link::before {
+  content: "";
+  background: rgb(92, 142, 230);
+  height: 1px;
+  width: 40px;
+  margin-right: 20px;
+}
