--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,15 @@ body {
   align-items: center;
   color: #ffffff;
   height: 94px;
-  position: relative;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 2;
+  width: 100%;
   border-bottom: 1px solid rgba(235, 235, 240, 0.2);
 }
 .header {
+  padding-top: 94px;
   min-height: 100vh;
 }
 .header-image {
