--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,14 @@ body {
   z-index: 2;
   width: 100%;
   border-bottom: 1px solid rgba(235, 235, 240, 0.2);
+  transition: background 0.2s;
+}
+.navbar-light {
+  background: #ffffff;
+  color: rgb(41, 45, 51);
+}
+.navbar-light .header-logo-path {
+  fill: rgb(41, 45, 51);
 }
 .header {
   padding-top: 94px;
