--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 @font-face {
   font-family: "Bebas Neue";
@@ -13,6 +15,9 @@ body {
 .container {
   max-width: 1440px;
   margin: auto;
+}
+.container-padding-left {
+  padding-left: 9px;
 }
 .navbar {
   display: flex;
@@ -40,13 +45,13 @@ body {
   background-image: url(../img/header-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center left 6px;
   position: relative;
 }
 .header-image::before {
   content: "";
   position: absolute;
-  background-color: rgba(41, 45, 51, 0.5);
+  background-color: rgba(41, 45, 51, 0.6);
   top: 0;
   left: 0;
   height: 100%;
@@ -56,7 +61,7 @@ body {
 .header-logo {
   display: flex;
   align-items: center;
-  padding: 0px 50px;
+  padding: 0px 49px;
   border-right: 1px solid rgba(235, 235, 240, 0.2);
   height: 100%;
 }
@@ -64,13 +69,13 @@ body {
   display: flex;
   flex-basis: 100%;
   list-style: none;
-  padding: 0 50px;
+  padding: 0 54px;
   margin: 0;
+  gap: 53px;
 }
 .heaer-nav-link {
   text-decoration: none;
   font-size: 16px;
-  margin-right: 50px;
   color: inherit;
 }
 .header-phone {
@@ -81,6 +86,9 @@ body {
   text-decoration: none;
   margin-right: 50px;
 }
+.icon-phone {
+  margin-right: 4px;
+}
 .header-phone-link {
   text-decoration: none;
   font-size: 16px;
@@ -89,10 +97,9 @@ body {
 .button {
   font-weight: 600;
   font-size: 16px;
-  line-height: 160%;
-  background: #3a71d1;
+  background: rgb(92, 142, 230);
   color: #ffffff;
-  padding: 25px 60px;
+  padding: 15px 46px;
   border: none;
   display: inline-block;
   cursor: pointer;
@@ -106,8 +113,16 @@ body {
   width: 150px;
   background: rgb(92, 142, 230);
 }
+.header-seporator {
+  margin-top: 35px;
+}
+.section-seporator {
+  margin-top: -5px;
+}
 .header-content {
-  margin-top: 150px;
+  padding-top: 31px;
+  margin-top: 84px;
+  margin-left: 9px;
   position: relative;
   z-index: 1;
   color: #fff;
@@ -117,7 +132,8 @@ body {
   font-family: "Bebas Neue";
   font-size: 80px;
   line-height: 120%;
-  margin: 30 0;
+  letter-spacing: 0.55px;
+  margin: 22px 0;
 }
 .header-text {
   max-width: 720px;
@@ -125,7 +141,12 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 160%;
-  margin-bottom: 50px;
+  margin: 40px 0;
+  letter-spacing: 0.13px;
+}
+.header-button {
+  margin-top: 10px;
+  padding: 28px 61px;
 }
 .header-features {
   display: flex;
@@ -137,23 +158,26 @@ body {
   position: relative;
 }
 .header-features-item {
-  padding: 30px 50px;
+  padding: 35px 46px 11px 58px;
+  width: 288px;
   border: 1px solid rgba(235, 235, 240, 0.2);
 }
 .header-features-text {
   font-size: 16px;
   font-weight: 400;
   line-height: 160%;
-  letter-spacing: 0%;
+  margin-top: 22px;
+  margin-bottom: 0;
 }
 .header-features-item:not(:last-child) {
   border-right: none;
 }
 .section {
-  margin-top: 150px;
+  margin-top: 155px;
   margin-bottom: 150px;
 }
 .section-title {
+  margin-top: 25px;
   font-family: "Bebas Neue";
   color: rgb(41, 45, 51);
   font-size: 60px;
@@ -174,6 +198,7 @@ body {
   line-height: 120%;
   display: flex;
   align-items: center;
+  padding-top: 55px;
 }
 .steps-num::after {
   content: "";
@@ -189,6 +214,7 @@ body {
   font-weight: 400;
   margin-top: 30px;
   margin-bottom: 10px;
+  padding-right: 30px;
 }
 .steps-text {
   color: rgb(130, 138, 153);
@@ -206,6 +232,7 @@ body {
   font-weight: 600;
   line-height: 160%;
   text-decoration: none;
+  padding-top: 5px;
 }
 .steps-link::before {
   content: "";
