--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,14 @@
   font-weight: normal;
   font-style: normal;
 }
+html {
+  font-size: 16px;
+}
 body {
   font-family: "Noto Sans", sans-serif;
 }
 .container {
-  max-width: 1440px;
+  max-width: 90rem;
   margin: auto;
 }
 .container-padding-left {
@@ -23,7 +26,7 @@ body {
   display: flex;
   align-items: center;
   color: #ffffff;
-  height: 94px;
+  height: 5.875rem;
   position: fixed;
   left: 0;
   top: 0;
@@ -35,17 +38,21 @@ body {
 .navbar-light {
   background: #ffffff;
   color: rgb(41, 45, 51);
-  height: 74px;
+  height: 4.625rem;
+}
+.logo-svg {
+  width: 8.75rem;
+  height: 2.75rem;
 }
 .header {
-  padding-top: 94px;
-  min-height: 100vh;
+  padding-top: 5.875rem;
+  min-height: 100%;
 }
 .header-image {
   background-image: url(../img/header-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center left 6px;
+  background-position: center left -0.625rem;
   position: relative;
 }
 .header-image::before {
@@ -61,7 +68,7 @@ body {
 .header-logo {
   display: flex;
   align-items: center;
-  padding: 0px 49px;
+  padding: 0px 3.0625rem;
   border-right: 1px solid rgba(235, 235, 240, 0.2);
   height: 100%;
 }
@@ -69,37 +76,42 @@ body {
   display: flex;
   flex-basis: 100%;
   list-style: none;
-  padding: 0 54px;
+  padding: 0;
+  padding-left: 3.375rem;
   margin: 0;
   gap: 53px;
+  margin-right: 2%;
 }
+/* .header-nav-item:not(:last-child) {
+  margin-right: 2%;
+} */
 .heaer-nav-link {
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1rem;
   color: inherit;
 }
 .header-phone {
   flex-shrink: 0;
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 0.625rem;
   text-decoration: none;
-  margin-right: 50px;
+  margin-right: 3.125rem;
 }
 .icon-phone {
-  margin-right: 4px;
+  margin-right: 0.25rem;
 }
 .header-phone-link {
   text-decoration: none;
-  font-size: 16px;
+  font-size: 1rem;
   color: inherit;
 }
 .button {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1rem;
   background: rgb(92, 142, 230);
   color: #ffffff;
-  padding: 15px 46px;
+  padding: 0.9375rem 2.875rem;
   border: none;
   display: inline-block;
   cursor: pointer;
@@ -110,47 +122,47 @@ body {
 }
 .seporator {
   height: 2px;
-  width: 150px;
+  width: 9.375rem;
   background: rgb(92, 142, 230);
 }
 .header-seporator {
-  margin-top: 35px;
+  margin-top: 2.1875rem;
 }
 .section-seporator {
-  margin-top: -5px;
+  margin-top: -0.3125rem;
 }
 .header-content {
-  padding-top: 31px;
-  margin-top: 84px;
-  margin-left: 9px;
+  padding-top: 1.9375rem;
+  margin-top: 5.25rem;
+  margin-left: 0.5625rem;
   position: relative;
   z-index: 1;
   color: #fff;
 }
 .header-title {
-  max-width: 1080px;
+  max-width: 67.5rem;
   font-family: "Bebas Neue";
-  font-size: 80px;
+  font-size: 5rem;
   line-height: 120%;
-  letter-spacing: 0.55px;
-  margin: 22px 0;
+  letter-spacing: 0.0344rem;
+  margin: 1.375rem 0;
 }
 .header-text {
-  max-width: 720px;
+  max-width: 45rem;
   font-style: normal;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 160%;
-  margin: 40px 0;
+  margin: 2.5rem 0;
   letter-spacing: 0.13px;
 }
 .header-button {
-  margin-top: 10px;
-  padding: 28px 61px;
+  margin-top: 0.625rem;
+  padding: 1.75rem 3.8125rem;
 }
 .header-features {
   display: flex;
-  min-height: 168px;
+  min-height: 10.5rem;
   padding: 0;
   margin-top: 100px;
   list-style: none;
@@ -158,86 +170,111 @@ body {
   position: relative;
 }
 .header-features-item {
-  padding: 35px 46px 11px 58px;
-  width: 288px;
+  padding: 2.1875rem 2.875rem 0.6875rem 3.625rem;
+  width: 18rem;
   border: 1px solid rgba(235, 235, 240, 0.2);
 }
 .header-features-text {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 160%;
-  margin-top: 22px;
+  margin-top: 1.375rem;
   margin-bottom: 0;
 }
 .header-features-item:not(:last-child) {
   border-right: none;
 }
 .section {
-  margin-top: 155px;
-  margin-bottom: 150px;
+  margin-top: 9.6875rem;
+  margin-bottom: 9.375rem;
 }
 .section-title {
-  margin-top: 25px;
+  margin-top: 1.5625rem;
   font-family: "Bebas Neue";
   color: rgb(41, 45, 51);
-  font-size: 60px;
+  font-size: 3.75rem;
 }
 .steps {
   display: flex;
   list-style: none;
   padding: 0;
-  gap: 30px;
+  gap: 1.875rem;
 }
 .steps-item {
-  max-width: 330px;
+  max-width: 20.625rem;
 }
 .steps-num {
   color: rgb(92, 142, 230);
   font-family: "Bebas Neue";
-  font-size: 48px;
+  font-size: 3rem;
   line-height: 120%;
   display: flex;
   align-items: center;
-  padding-top: 55px;
+  padding-top: 3.4375rem;
 }
 .steps-num::after {
   content: "";
   height: 1px;
   width: 100%;
   background: rgb(235, 235, 240);
-  margin-left: 30px;
+  margin-left: 1.875rem;
 }
 .steps-title {
   color: rgb(41, 45, 51);
-  font-size: 28px;
+  font-size: 1.75rem;
   line-height: 160%;
   font-weight: 400;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  padding-right: 30px;
+  margin-top: 1.875rem;
+  margin-bottom: 0.625rem;
+  padding-right: 1.875rem;
 }
 .steps-text {
   color: rgb(130, 138, 153);
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 160%;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 0.625rem;
+  margin-bottom: 1.25rem;
 }
 .steps-link {
   display: flex;
   align-items: center;
   color: rgb(92, 142, 230);
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 600;
   line-height: 160%;
   text-decoration: none;
-  padding-top: 5px;
+  padding-top: 0.3125rem;
 }
 .steps-link::before {
   content: "";
   background: rgb(92, 142, 230);
   height: 1px;
-  width: 40px;
-  margin-right: 20px;
+  width: 2.5rem;
+  margin-right: 1.25rem;
+}
+@media (max-width: 1750px) {
+  html {
+    font-size: 14px;
+  }
+}
+@media (max-width: 1560px) {
+  html {
+    font-size: 13px;
+  }
+}
+@media (max-width: 1465px) {
+  html {
+    font-size: 12px;
+  }
+}
+@media (max-width: 1380px) {
+  html {
+    font-size: 11px;
+  }
+}
+@media (max-width: 1280px) {
+  html {
+    font-size: 10px;
+  }
 }
