--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  /* margin: 0; */
 }
 @font-face {
   font-family: "Bebas Neue";
@@ -19,9 +18,12 @@ body {
   max-width: 90rem;
   margin: auto;
 }
-.container-padding-left {
-  padding-left: 9px;
+.mobile-menu {
+  display: none;
 }
+/* .container-padding-left {
+  padding-left: 9px;
+} */
 .navbar {
   display: flex;
   align-items: center;
@@ -40,19 +42,22 @@ body {
   color: rgb(41, 45, 51);
   height: 4.625rem;
 }
+.icon-phone {
+  fill: #5c8ee6;
+}
 .logo-svg {
   width: 8.75rem;
   height: 2.75rem;
 }
 .header {
   padding-top: 5.875rem;
-  min-height: 100%;
+  /* min-height: 100%; */
 }
 .header-image {
   background-image: url(../img/header-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center left -0.625rem;
+  /* background-position: center left -0.625rem; */
   position: relative;
 }
 .header-image::before {
@@ -74,33 +79,41 @@ body {
 }
 .header-nav {
   display: flex;
-  flex-basis: 100%;
+  align-items: center;
+  height: 100%;
+  flex-grow: 1;
   list-style: none;
   padding: 0;
-  padding-left: 3.375rem;
+  padding-left: 3.125rem;
   margin: 0;
-  gap: 53px;
-  margin-right: 2%;
 }
-/* .header-nav-item:not(:last-child) {
-  margin-right: 2%;
-} */
-.heaer-nav-link {
+.header-nav-item:not(:last-child) {
+  margin-right: 4%;
+}
+.header-nav-item {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.header-nav-link {
+  display: flex;
+  height: 100%;
+  align-items: center;
   text-decoration: none;
   font-size: 1rem;
   color: inherit;
+  position: relative;
 }
 .header-phone {
   flex-shrink: 0;
   display: flex;
   align-items: center;
   gap: 0.625rem;
-  text-decoration: none;
   margin-right: 3.125rem;
 }
-.icon-phone {
+/* .icon-phone {
   margin-right: 0.25rem;
-}
+} */
 .header-phone-link {
   text-decoration: none;
   font-size: 1rem;
@@ -119,22 +132,31 @@ body {
 .navbar-button {
   flex-shrink: 0;
   height: 100%;
+  padding: 1.5625rem 3.125rem;
+}
+.navbar-button .button-icon {
+  display: none;
+}
+.header-button {
+  height: 100%;
+  /* margin-top: 0.625rem;
+  padding: 1.75rem 3.8125rem; */
 }
 .seporator {
   height: 2px;
   width: 9.375rem;
   background: rgb(92, 142, 230);
 }
-.header-seporator {
+/* .header-seporator {
   margin-top: 2.1875rem;
 }
 .section-seporator {
   margin-top: -0.3125rem;
-}
+} */
 .header-content {
   padding-top: 1.9375rem;
-  margin-top: 5.25rem;
-  margin-left: 0.5625rem;
+  /* margin-top: 5.25rem;
+  margin-left: 0.5625rem; */
   position: relative;
   z-index: 1;
   color: #fff;
@@ -143,9 +165,9 @@ body {
   max-width: 67.5rem;
   font-family: "Bebas Neue";
   font-size: 5rem;
-  line-height: 120%;
-  letter-spacing: 0.0344rem;
-  margin: 1.375rem 0;
+  margin: 1.875rem 0;
+  letter-spacing: 0.8px;
+  word-spacing: -1.6px;
 }
 .header-text {
   max-width: 45rem;
@@ -153,26 +175,26 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 160%;
-  margin: 2.5rem 0;
-  letter-spacing: 0.13px;
-}
-.header-button {
-  margin-top: 0.625rem;
-  padding: 1.75rem 3.8125rem;
+  margin-bottom: 3.125rem;
 }
 .header-features {
   display: flex;
-  min-height: 10.5rem;
+  align-items: stretch;
   padding: 0;
-  margin-top: 100px;
+  margin-top: 6.25rem;
+  margin-bottom: 0;
   list-style: none;
-  color: #ffffff;
+  color: #fff;
   position: relative;
 }
 .header-features-item {
-  padding: 2.1875rem 2.875rem 0.6875rem 3.625rem;
+  padding: 1.75rem 3.125rem;
+  height: auto;
   width: 18rem;
   border: 1px solid rgba(235, 235, 240, 0.2);
+}
+.header-button {
+  padding: 1.625rem 3.75rem;
 }
 .header-features-text {
   font-size: 1rem;
@@ -185,14 +207,17 @@ body {
   border-right: none;
 }
 .section {
-  margin-top: 9.6875rem;
-  margin-bottom: 9.375rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 .section-title {
-  margin-top: 1.5625rem;
   font-family: "Bebas Neue";
-  color: rgb(41, 45, 51);
   font-size: 3.75rem;
+  line-height: 120%;
+  letter-spacing: 0.6px;
+  color: #292d33;
+  margin-top: 2rem;
+  margin-bottom: 2.1rem;
 }
 .steps {
   display: flex;
@@ -210,7 +235,6 @@ body {
   line-height: 120%;
   display: flex;
   align-items: center;
-  padding-top: 3.4375rem;
 }
 .steps-num::after {
   content: "";
@@ -244,37 +268,191 @@ body {
   font-weight: 600;
   line-height: 160%;
   text-decoration: none;
-  padding-top: 0.3125rem;
 }
 .steps-link::before {
   content: "";
   background: rgb(92, 142, 230);
   height: 1px;
-  width: 2.5rem;
+  width: 40px;
   margin-right: 1.25rem;
 }
-@media (max-width: 1750px) {
+@media (max-width: 1700px) {
   html {
     font-size: 14px;
   }
 }
-@media (max-width: 1560px) {
+@media (max-width: 1460px) {
   html {
     font-size: 13px;
   }
+  .header-logo {
+    padding: 2rem;
+  }
+  .logo-svg {
+    max-width: 6rem;
+  }
+  .header-nav {
+    padding-left: 2rem;
+  }
+  .header-nav-item:not(:last-child) {
+    margin-right: 1rem;
+  }
+  .header-phone {
+    margin-right: 2rem;
+  }
 }
-@media (max-width: 1465px) {
+@media (max-width: 1200px) {
+  .container {
+    max-width: 70rem;
+  }
+  .header-phone {
+    display: none;
+  }
+  .navbar {
+    height: 5rem;
+  }
+  .navbar-button {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+@media (max-width: 992px) {
   html {
     font-size: 12px;
   }
-}
-@media (max-width: 1380px) {
-  html {
-    font-size: 11px;
+  /* body {
+    width: 992px;
+  } */
+  .container {
+    max-width: 60rem;
   }
-}
-@media (max-width: 1280px) {
-  html {
-    font-size: 10px;
+  .header-nav {
+    display: none;
   }
+  .header-logo {
+    flex-grow: 1;
+    justify-content: center;
+    border: none;
+  }
+  .mobile-menu-toggle {
+    width: 80px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1.8rem;
+    border-right: 1px solid rgba(235, 235, 240, 0.2);
+  }
+  .navbar-light .mobile-menu-line {
+    background: #292d33;
+  }
+  .mobile-menu-line {
+    height: 1px;
+    width: 100%;
+    background: #ffffff;
+  }
+  .mobile-menu-line:nth-child(2) {
+    width: 80%;
+  }
+  .navbar-button .button-text {
+    display: none;
+  }
+  .navbar-button .button-icon {
+    display: block;
+    fill: #ffffff;
+  }
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    z-index: 2;
+    background-color: #ffffff;
+    padding-top: 5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  .mobile-menu.is-open {
+    display: block;
+  }
+  .mobile-menu-nav {
+    list-style: none;
+    padding: 0;
+  }
+  .mobile-menu-nav-item {
+    padding-bottom: 1.875rem;
+  }
+  .mobile-menu-link {
+    text-decoration: none;
+    color: rgb(41, 45, 51);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 160%;
+  }
+  .mobile-submenu {
+    list-style: none;
+    padding: 0;
+    padding-left: 1.2rem;
+    padding-top: 1.25rem;
+  }
+  .mobile-submenu-item {
+    padding-top: 0.625rem;
+  }
+  .mobile-submenu-link {
+    text-decoration: none;
+    color: rgb(130, 138, 153);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 160%;
+  }
+  .mobile-seporator {
+    background: #ebebf0;
+  }
+  .mobile-phone {
+    display: block;
+    text-decoration-line: underline;
+    color: rgb(41, 45, 51);
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 160%;
+    border-top: 1px solid #ebebf0;
+    padding-top: 2rem;
+    margin-bottom: 1.5rem;
+  }
+  .mobile-info {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+  .mobile-info-address,
+  .mobile-info-email {
+    font-style: normal;
+    color: rgb(41, 45, 51);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 160%;
+    text-decoration: none;
+  }
+  .mobile-social {
+    display: flex;
+    align-items: center;
+    padding-top: 1rem;
+  }
+  .mobile-social-link {
+    text-decoration: none;
+    margin-right: 1rem;
+  }
+  /* Временные стили что бы не вылазили за body начало */
+  .steps {
+    display: block;
+  }
+  .header-features {
+    display: block;
+  }
+  /* Временные стили что бы не вылазили за body конец */
 }
