--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
   display: none;
 }
 .header {
-  padding-top: 13.875rem;
+  padding-top: 5.875rem;
 }
 .header-image {
   background-image: url(../img/header-bg.png);
@@ -89,7 +89,7 @@ body {
   margin: 0;
 }
 .header-nav-item:not(:last-child) {
-  margin-right: 5%;
+  margin-right: 4%;
 }
 .header-nav-item {
   height: 100%;
@@ -126,7 +126,7 @@ body {
   display: flex;
   align-items: center;
   gap: 0.625rem;
-  margin-right: 2.525rem;
+  margin-right: 3.125rem;
 }
 .header-phone-link {
   text-decoration: none;
@@ -165,7 +165,7 @@ body {
   background: rgb(92, 142, 230);
 }
 .header-content {
-  padding-top: 1.4375rem;
+  padding-top: 1.9375rem;
   position: relative;
   z-index: 1;
   color: #fff;
@@ -175,7 +175,7 @@ body {
   font-family: "Bebas Neue";
   font-size: 5rem;
   margin: 1.875rem 0;
-  letter-spacing: 0.0625rem;
+  letter-spacing: 0.8px;
   word-spacing: -1.6px;
 }
 .header-text {
@@ -185,8 +185,7 @@ body {
   font-weight: 400;
   line-height: 160%;
   margin-bottom: 3.125rem;
-  overflow-wrap: break-word;
-  padding-top: 8px;
+  overflow-wrap: break-word; /* современный аналог word-wrap */
 }
 .header-features {
   display: flex;
@@ -245,10 +244,7 @@ body {
 }
 .section {
   padding-top: 4rem;
-  padding-bottom: 3rem;
-}
-.section-light {
-  padding-top: 9.5625rem;
+  padding-bottom: 4rem;
 }
 .section-title {
   font-family: "Bebas Neue";
@@ -256,18 +252,16 @@ body {
   line-height: 120%;
   letter-spacing: 0.6px;
   color: #292d33;
-  margin-top: 1.6rem;
+  margin-top: 2rem;
   margin-bottom: 2.1rem;
 }
-/* STEPS */
 .steps {
   display: flex;
-  justify-content: space-between;
   list-style: none;
-  padding: 17px 0px 0px 0px;
+  padding: 0;
 }
 .steps-item {
-  max-width: 21.3rem;
+  max-width: 22rem;
 }
 .steps-num {
   color: rgb(92, 142, 230);
@@ -286,7 +280,7 @@ body {
 }
 .steps-title {
   color: rgb(41, 45, 51);
-  font-size: 1.85rem;
+  font-size: 1.75rem;
   line-height: 160%;
   font-weight: 400;
   margin-top: 1.875rem;
@@ -306,7 +300,6 @@ body {
 .steps-link {
   display: flex;
   align-items: center;
-  padding-top: 5px;
   color: rgb(92, 142, 230);
   font-size: 1rem;
   font-weight: 600;
@@ -444,9 +437,7 @@ body {
     padding: 2rem;
   }
   .logo-svg {
-    max-width: 10rem;
-    width: 11.75rem;
-    height: 4.75rem;
+    max-width: 6rem;
   }
   .header-nav {
     padding-left: 2rem;
@@ -455,7 +446,7 @@ body {
     margin-right: 1rem;
   }
   .header-phone {
-    margin-right: 0.6rem;
+    margin-right: 2rem;
   }
 }
 @media (max-width: 1200px) {
@@ -466,15 +457,11 @@ body {
     display: none;
   }
   .navbar {
-    height: 5.7rem;
+    height: 5rem;
   }
   .navbar-button {
-    display: flex;
     padding-left: 2rem;
     padding-right: 2rem;
-    padding-top: 25px;
-    width: 18.6375rem;
-    justify-content: center;
   }
   .slider-buttons {
     display: flex;
@@ -520,23 +507,20 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 2.2rem 2.2rem 2.2rem 2.5rem;
+    padding: 1.8rem;
     border-right: 1px solid rgba(235, 235, 240, 0.2);
   }
   .navbar-light .mobile-menu-line {
     background: #292d33;
   }
   .mobile-menu-line {
-    height: 2px;
-    width: 87%;
+    height: 1px;
+    width: 100%;
     background: #ffffff;
     transition: transform 0.3s;
   }
   .mobile-menu-line:nth-child(2) {
-    width: 70%;
-  }
-  .navbar-button {
-    width: 6.6375rem;
+    width: 80%;
   }
   .navbar-button .button-text {
     display: none;
@@ -669,9 +653,9 @@ body {
   .header-title {
     font-size: 4rem;
   }
-  /* .header-content {
+  .header-content {
     padding-top: 3rem;
-  } */
+  }
   .steps-item {
     max-width: 100%;
   }
@@ -680,152 +664,16 @@ body {
   .container {
     max-width: 45rem;
   }
-  .card {
-    flex-basis: 100%;
-  }
 }
 @media (max-width: 576px) {
   .container {
     max-width: 93%;
   }
   .header-title {
-    font-size: 3.8rem;
-    line-height: 57px;
-    margin: 1.375rem 0;
-    letter-spacing: 0.1rem;
+    font-size: 2.5rem;
   }
-  /* .header-content {
+  .header-content {
     padding-top: 2rem;
-  } */
-  .card-image {
-    padding-top: 4rem;
-  }
-}
-@media (max-width: 425px) {
-  .trademarks-text-mobile {
-    text-align: left;
-  }
-  .trademarks-img {
-    width: 100px;
-  }
-  .seporator {
-    width: 100px;
-  }
-  .header-text {
-    padding-top: 4px;
-    font-size: 13px;
-    line-height: 26.9px;
-    margin-bottom: 26px;
-  }
-  .header-button {
-    width: 100%;
-    text-align: center;
-    font-size: 15px;
-  }
-  .section-light {
-    padding-top: 8.5625rem;
-  }
-  .section-title {
-    font-size: 2.75rem;
-    letter-spacing: 0.12rem;
-    margin-bottom: 1.2rem;
-  }
-  .steps-num {
-    font-size: 4rem;
-  }
-  .steps-title {
-    margin-top: 0.775rem;
-    letter-spacing: -1px;
-  }
-  .steps-link {
-    padding-top: 18px;
-    margin-left: 10px;
-    letter-spacing: 1.3px;
-  }
-  .steps-slider-buttons {
-    margin-top: 1.75rem;
-  }
-  .production {
-    margin-top: 16px;
-    padding-bottom: 19px;
-  }
-  .section-mb {
-    margin-bottom: 44px;
-  }
-  .card {
-    margin: 0;
-  }
-  .card:nth-child(1) {
-    margin-top: 5px;
-  }
-  .card:nth-child(1) .card-image {
-    padding-top: 82px;
-  }
-  .card:nth-child(2) {
-    margin-top: 12px;
-  }
-  .card:nth-child(2) .card-image {
-    padding-top: 44px;
-  }
-  .card:nth-child(3) {
-    margin-top: 9px;
-  }
-  .card:nth-child(3) .card-image {
-    padding-top: 74px;
-  }
-  .card:nth-child(4) {
-    margin-top: 12px;
-  }
-  .card:nth-child(4) .card-image {
-    padding-top: 83px;
-  }
-  .card:nth-child(5) {
-    margin-top: 11px;
-  }
-  .card:nth-child(5) .card-image {
-    padding-top: 104px;
-  }
-  .card:nth-child(6) {
-    margin-top: 10px;
-  }
-  .card:nth-child(6) .card-image {
-    padding-top: 44px;
-  }
-  .card .card-title {
-    margin-top: 5px;
-    width: 90%;
-  }
-  .card-text {
-    font-size: 1rem;
-    letter-spacing: 0.6px;
-  }
-  .card-content {
-    padding-left: 30px;
-    padding-top: 0;
-  }
-  .card-image {
-    padding-top: 72px;
-  }
-  .trademarks {
-    padding-top: 6.875rem;
-  }
-  .trademarks-card {
-    padding-top: 0.025rem;
-  }
-  .trademarks-title-mobile {
-    font-size: 20px;
-  }
-  .trademarks-text-mobile {
-    font-size: 14px;
-  }
-}
-@media (max-width: 320px) {
-  .trademarks-title-mobile {
-    font-size: 22px;
-  }
-  .trademarks-text-mobile {
-    max-width: 100%;
-    justify-content: start;
   }
   .product-card {
     flex-basis: 100%;
