--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
   display: none;
 }
 .header {
-  padding-top: 5.875rem;
+  padding-top: 13.3rem;
 }
 .header-image {
   background-image: url(../img/header-bg.png);
@@ -89,7 +89,7 @@ body {
   margin: 0;
 }
 .header-nav-item:not(:last-child) {
-  margin-right: 4%;
+  margin-right: 5%;
 }
 .header-nav-item {
   height: 100%;
@@ -151,13 +151,14 @@ body {
 .navbar-button {
   flex-shrink: 0;
   height: 100%;
-  padding: 1.5625rem 3.125rem;
+  padding: 1.5625rem 2.825rem;
 }
 .navbar-button .button-icon {
   display: none;
 }
 .header-button {
   height: 100%;
+  padding: 1.55rem 3.85rem;
 }
 .seporator {
   height: 2px;
@@ -174,7 +175,7 @@ body {
   max-width: 67.5rem;
   font-family: "Bebas Neue";
   font-size: 5rem;
-  margin: 1.875rem 0;
+  margin: 1.6rem 0;
   letter-spacing: 0.8px;
   word-spacing: -1.6px;
 }
@@ -184,6 +185,8 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 160%;
+  word-spacing: 0.125rem;
+  padding-top: 1.1875rem;
   margin-bottom: 3.125rem;
   overflow-wrap: break-word; /* современный аналог word-wrap */
 }
@@ -199,7 +202,7 @@ body {
 }
 .header-features-item {
   height: auto;
-  padding: 1.75rem 3.125rem;
+  padding: 2rem 3.125rem;
   width: 18rem;
   border: 1px solid rgba(235, 235, 240, 0.2);
 }
@@ -231,9 +234,6 @@ body {
   padding-left: 18px;
   padding-right: 18px;
 }
-.header-button {
-  padding: 1.625rem 3.75rem;
-}
 .header-features-text {
   font-size: 1rem;
   font-weight: 400;
@@ -252,16 +252,17 @@ body {
   line-height: 120%;
   letter-spacing: 0.6px;
   color: #292d33;
-  margin-top: 2rem;
+  margin-top: 1.68rem;
   margin-bottom: 2.1rem;
+}
+.section-light {
+  padding-top: 9.125rem;
 }
 .steps {
   display: flex;
   list-style: none;
   padding: 0;
-}
-.steps-item {
-  max-width: 22rem;
+  padding-top: 1rem;
 }
 .steps-num {
   color: rgb(92, 142, 230);
@@ -283,13 +284,14 @@ body {
   font-size: 1.75rem;
   line-height: 160%;
   font-weight: 400;
-  margin-top: 1.875rem;
+  margin-top: 2.075rem;
   margin-bottom: 0.625rem;
   padding-right: 1.875rem;
+  width: 14.0625rem;
 }
 .steps-text {
   display: block;
-  width: 85%;
+  width: 82%;
   color: rgb(130, 138, 153);
   font-size: 1rem;
   font-weight: 400;
@@ -318,6 +320,9 @@ body {
   width: 60px;
 }
 /* ---------------------SECTION PRODUCTS---------------------- */
+.section-products {
+  padding-top: 2.9375rem;
+}
 .section-product-cards {
   display: flex;
   flex-wrap: wrap;
@@ -355,6 +360,7 @@ body {
   width: 19.375rem;
   height: 6.5rem;
   margin: 0;
+  padding-top: 0.8rem;
   color: #828a99;
   font-family: Noto Sans;
   font-size: 16px;
@@ -363,17 +369,22 @@ body {
 }
 .product-card-image {
   width: 100%;
-  padding-top: 5.875rem;
+  padding-top: 6.675rem;
 }
 /* ---------------------SECTION TRADEMARKS---------------------- */
+.trademarks {
+  padding-top: 5.175rem;
+}
 .trademarks-cards {
   display: flex;
+  padding-top: 1.25rem;
+  padding-left: 1rem;
 }
 .trademarks-card {
   flex-basis: 50%;
   border: 1px solid #ebebf0;
   transition: border 0.2s;
-  padding: 3.125rem;
+  padding: 3.3rem;
   display: grid;
   column-gap: 50px;
   grid-template-columns: 180px 1fr;
@@ -413,9 +424,16 @@ body {
 }
 .trademarks-image {
   width: 100%;
+  height: 9.6875rem;
   grid-area: logo;
   fill: #828a99;
   transition: fill 0.2s;
+  padding-top: 1rem;
+}
+.ag-tech-image {
+  width: 140px;
+  margin-left: 11px;
+  margin-top: 4px;
 }
 
 @media (max-width: 1700px) {
@@ -666,18 +684,34 @@ body {
   }
 }
 @media (max-width: 576px) {
+  .header {
+    padding-top: 7.8rem;
+  }
   .container {
     max-width: 93%;
   }
   .header-title {
-    font-size: 2.5rem;
+    font-size: 3.8rem;
+    line-height: 4.7625rem;
+  }
+  .header-text {
+    font-size: 1.1375rem;
+    padding-top: 0;
+    word-spacing: 7px;
+    margin-bottom: 2.275rem;
+  }
+  .header-button {
+    width: 100%;
+    text-align: center;
+    font-size: 1.175rem;
+    padding: 1.65rem 3.85rem;
   }
   .header-content {
     padding-top: 2rem;
   }
   .product-card {
     flex-basis: 100%;
-    padding-top: 30px;
+    padding-top: 23px;
   }
   .product-card-text {
     width: 90%;
@@ -687,9 +721,59 @@ body {
       "logo title"
       "text text";
     column-gap: 2.5625rem;
-    padding: 30px;
+    padding: 0;
+    padding-left: 2.25rem;
   }
-  .trademarks-card-title {
-    padding-top: 25px;
+  .trademarks-card {
+    grid-template-columns: 102px;
+  }
+  .header-features {
+    margin-top: 4.25rem;
+    height: 11.65rem;
+  }
+  .section-light {
+    padding-top: 8.325rem;
+  }
+  .section-title {
+    margin-bottom: 0.7rem;
+  }
+  .steps-num {
+    font-size: 4rem;
+  }
+  .steps-title {
+    margin-top: 1.075rem;
+  }
+  .steps-link {
+    padding-top: 16px;
+    font-size: 14px;
+    padding-left: 7px;
+  }
+  .section-products {
+    padding-top: 4.6375rem;
+  }
+  .section-product-cards {
+    margin-top: 12px;
+  }
+  .product-card-title {
+    font-size: 1.75rem;
+  }
+  .trademarks {
+    padding-top: 3.675rem;
+  }
+  .trademarks-card-text {
+    padding-top: 8px;
+  }
+  .trademarks-image {
+    height: 7.9875rem;
+  }
+  .ag-tech-image {
+    width: 92px;
+    padding: 0;
+    margin: 0;
+  }
+  .trademarks-cards {
+    margin: 0;
+    padding: 0;
+    gap: 60px;
   }
 }
