--- a/css/style.css
+++ b/css/style.css
@@ -222,10 +222,13 @@ body {
 }
 .steps-slider-buttons {
   display: none;
-  height: 40px;
 }
-.steps-slider-button-prev,
-.steps-slider-button-next {
+.primary-buttons-wrapper {
+  height: 40px;
+  cursor: pointer;
+}
+.primary-button-prev,
+.primary-button-next {
   background: rgb(92, 142, 230);
   display: flex;
   justify-content: center;
@@ -516,6 +519,59 @@ body {
 .clients-logo-item:hover {
   filter: grayscale(0%);
   transform: scale(1.1);
+}
+/* ---------------------SECTION BLOG---------------------- */
+.blog-card {
+  display: flex;
+  justify-content: end;
+  position: relative;
+  min-height: 25rem;
+  flex-direction: column;
+  text-decoration: none;
+  color: #fff;
+  padding: 3.125rem;
+}
+.blog-card-title {
+  margin-bottom: 0.625rem;
+  margin-top: 0;
+  font-size: 1.75rem;
+  font-weight: 400;
+  line-height: 160%;
+}
+.blog-card-text {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 160%;
+}
+.blog-card::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(41, 45, 51, 0.6);
+  z-index: -1;
+}
+.blog-card-image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+.blog-slider-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 1.25rem;
+}
+.blog-slider-buttons {
+  display: flex;
+  justify-content: end;
 }
 @media (max-width: 1700px) {
   html {
