--- a/css/style.css
+++ b/css/style.css
@@ -600,7 +600,7 @@ body {
 }
 .section-cta {
   position: relative;
-  padding-top: 6.25rem;
+  padding-top: 5.45rem;
   padding-bottom: 6.25rem;
   margin-top: 9.375rem;
 }
@@ -616,7 +616,11 @@ body {
   justify-content: flex-end;
 }
 .cta-form {
-  max-width: 52.5rem;
+  width: 52.5rem;
+}
+.cta-form-title {
+  margin-top: 0.98rem;
+  margin-bottom: 1.75rem;
 }
 .cta-form-text {
   color: rgb(130, 138, 153);
@@ -624,7 +628,7 @@ body {
   font-weight: 400;
   line-height: 160%;
   margin-top: 1.375rem;
-  margin-bottom: 2.5rem;
+  margin-bottom: 3.1rem;
   max-width: 40rem;
 }
 .input-group-wrapper {
@@ -678,6 +682,8 @@ body {
 }
 .cta-form-button {
   flex-shrink: 0;
+  width: 14.625rem;
+  height: 3.875rem;
 }
 .notify {
   display: flex;
@@ -688,7 +694,7 @@ body {
   flex-shrink: 0;
 }
 .notify-text {
-  min-width: 23.75rem;
+  width: 23.75rem;
   margin: 0;
   color: #828a99;
   font-size: 12px;
@@ -712,12 +718,9 @@ body {
   .clients-logo-list {
     grid-template-rows: 1fr 1fr 1fr;
   }
-  /* .clients-logo-list {
-    display: flex;
-    flex-wrap: wrap;
-    flex-shrink: 10;
-    padding-top: 2.375rem;
-  } */
+  .notify-text {
+    width: 100%;
+  }
 }
 @media (max-width: 1460px) {
   html {
@@ -1192,14 +1195,24 @@ body {
   }
   .input-group-wrapper {
     flex-direction: column;
+    gap: 2.875rem;
   }
   .cta-form-footer {
     flex-direction: column;
+    margin-top: 1.275rem;
+  }
+  .cta-form-text {
+    font-size: 1.175rem;
+    margin-bottom: 30px;
   }
   .cta-form-button {
     width: 100%;
+    height: 5.175rem;
   }
   .notify {
     width: 100%;
+  }
+  .cta-form {
+    margin-top: 20px;
   }
 }
