--- a/css/style.css
+++ b/css/style.css
@@ -788,6 +788,13 @@ body {
   line-height: 160%;
   margin-bottom: 0.9375rem;
   display: block;
+  transition: opacity 0.1s;
+}
+.footer-menu-link:hover {
+  opacity: 0.8;
+}
+.footer-menu-link.footer-menu-link-bold:hover {
+  opacity: 1;
 }
 .footer-menu-link-bold {
   color: rgb(41, 45, 51);
@@ -796,6 +803,22 @@ body {
   line-height: 160%;
   text-decoration: none;
   margin-bottom: 1.875rem;
+  position: relative;
+  display: inline-block;
+}
+.footer-menu-link-bold:after {
+  content: "";
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  height: 1px;
+  width: 100%;
+  opacity: 0;
+  background-color: rgb(41, 45, 51);
+  transition: opacity 0.1s;
+}
+.footer-menu-link-bold:hover:after {
+  opacity: 0.7;
 }
 .footer-wrapper {
   display: flex;
