--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,84 @@ body {
 .header {
   padding-top: 13.3rem;
 }
+.header-page {
+  padding-top: 9rem;
+  padding-bottom: 3.125rem;
+  position: relative;
+  color: rgb(41, 45, 51);
+}
+.header-page-title {
+  color: inherit;
+  font-family: "Bebas Neue";
+  font-size: 80px;
+  line-height: 120%;
+  margin: 0;
+  margin-top: 26px;
+}
+.header-page-image {
+  position: absolute;
+  bottom: 0;
+  right: 12%;
+}
+.header-page-bg-image {
+  background-image: url(../img/header-bg-image.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #fff;
+}
+.header-page-bg-image::after {
+  content: "";
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(41, 45, 51, 0.6);
+}
+.header-page-bg-image .container {
+  position: relative;
+  z-index: 1;
+}
+.breadcrumbs {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+  list-style: none;
+  margin: 0;
+  margin-top: 23px;
+}
+.breadcrumbs-item {
+  color: rgb(130, 138, 153);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 160%;
+  display: flex;
+  align-items: center;
+  flex-shrink: 1;
+  margin-bottom: 10px;
+}
+.header-page-bg-image .breadcrumbs-item {
+  color: #fff;
+}
+.breadcrumbs-item:not(:last-child)::after {
+  content: "";
+  height: 1px;
+  width: 14px;
+  background-color: rgb(130, 138, 153);
+  margin: 0 10px;
+}
+.header-page-bg-image .breadcrumbs-item:not(:last-child)::after {
+  background-color: #fff;
+}
+.active {
+  color: rgb(41, 45, 51);
+}
+.breadcrumbs-item-link {
+  text-decoration: none;
+  color: inherit;
+}
 .header-image {
   background-image: url(../img/header-bg.png);
   background-size: cover;
@@ -363,6 +441,7 @@ body {
   flex-grow: 1;
   border: 1px solid #ebebf0;
   transition: border 0.2s;
+  text-decoration: none;
 }
 .product-card-content {
   margin-left: 3.125rem;
@@ -1057,6 +1136,12 @@ body {
   .footer-menu-wrapper:last-child {
     margin-left: 9rem;
   }
+  .header-page-image {
+    display: none;
+  }
+  .header-page-title {
+    font-size: 65px;
+  }
 }
 @media (max-width: 992px) {
   html {
@@ -1556,5 +1641,11 @@ body {
   }
   .cta {
     padding-bottom: 1.1875rem;
+  }
+  .header-page-title {
+    font-size: 48px;
+  }
+  .breadcrumbs-item {
+    margin-bottom: 10px;
   }
 }
